Details updated to database

--- a/profile.html
+++ b/profile.html
@@ -28,6 +28,9 @@
 
     <!-- Edit Mode -->
     <div class="edit-mode form-group"style="display: none">
+      <label for="email-input"><strong>Email:</strong></label>
+      <input type="text" id="email-input" value="" />
+      <br />
       <label for="name-input"><strong>Name:</strong></label>
       <input type="text" id="name-input" value="John Doe" />
       <br />
